prototype service